--- a/trainer-landing-page/style.css
+++ b/trainer-landing-page/style.css
@@ -486,3 +486,13 @@ footer {
     backdrop-filter: blur(10px);
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.6);
 }
+
+/* SMOOTH SCROLL */
+html {
+    scroll-behavior: smooth;
+}
+
+/* OFFSET POD FIXED NAVBAR */
+section {
+    scroll-margin-top: 100px;
+}
